log
ju., 12 de may. de 2022 13:56:50: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
664c7ed
ju., 12 de may. de 2022 13:59:39: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9d28a2b
ju., 12 de may. de 2022 14:02:31: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:60:3: error: implicit declaration of function 'print' [-Werror=implicit-function-declaration]
   print("%d\n%d\n", i, j);
   ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a3bf9f3
ju., 12 de may. de 2022 14:02:39: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
3f0eea6
ju., 12 de may. de 2022 14:05:52: 
 sudoku.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
44c3da0
ju., 12 de may. de 2022 14:06:18: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
0a7095b
ju., 12 de may. de 2022 14:08:44: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
5cf9573
ju., 12 de may. de 2022 14:42:21: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  2|4
total_score: 15/70
789fd0e
ju., 12 de may. de 2022 15:11:29: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
7dc8952
ju., 12 de may. de 2022 15:16:47: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
fc64c89
ju., 12 de may. de 2022 15:17:34: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  5|3
total_score: 35/70
3d7695c
